Some minor bug fix and added Custom Scrollbar

--- a/css/footer.css
+++ b/css/footer.css
@@ -16,7 +16,7 @@
     margin-bottom: 50px;
     border-radius: 10px;
     display: grid;
-    grid-template-columns: 3fr 2fr 2fr 3fr;
+    grid-template-columns: 4fr 3fr 5fr;
 }
 
 .footer-section{
