--- a/css/header.css
+++ b/css/header.css
@@ -33,7 +33,6 @@ body{
     display: inline-block;
     margin: 10px 0px 10px 40px;
     border-radius: 10%;
-    border: 2px solid black;
     height: 80px;
     width: 100px;
 }
