--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+:root{
+    --primary-color: rgb(0, 65, 0);
+}
+
 ul, *, body, html{
     margin: 0;
     padding: 0;
@@ -10,15 +14,27 @@ ul, *, body, html{
 body{
 background-color: white;
 }
+
 a{
     text-decoration: none;
+    color: inherit;
 }
+
+
+
 .primary-font{
-    color:rgb(0, 65, 0);
+    color:  var(--primary-color);
 }
 .primary-bg{
-    background-color: rgb(0, 65, 0);
+    background-color: var(--primary-color);
 }
+
+
+.bg-img{
+    height: 720px;
+    background-repeat: round;
+}
+
 .sm-font{
     font-size: 14px;
     color: white;
@@ -49,6 +65,17 @@ a{
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
+
+.third-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.quarter-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
 .flex{
     display: flex;
 }
@@ -73,6 +100,7 @@ a{
 .gen-para{
     font-size: 18px;
 }
+
 
 @media screen and (max-width: 1600px) {
     .lt-margin-content{
@@ -130,6 +158,10 @@ a{
         font-size: 13px;
     }
     
+    .bg-img{
+        height: 600px;
+    }
+    
 }
 
 @media screen and (max-width:600px) {
@@ -137,4 +169,18 @@ a{
         font-size: 10px;
     }
 
+}
+
+/* Custom Scrollbar  */
+
+::-webkit-scrollbar{
+    width: 5px;
+}
+::-webkit-scrollbar-track{
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb{
+    background: rgb(0, 65, 0);
+    border-radius: 10px;
 }
